fix: improve contrast of text on sentence completion buttons

--- a/src/client/ActionTextCell.scss
+++ b/src/client/ActionTextCell.scss
@@ -11,7 +11,8 @@
 
 .actionTextCell {
   border: 2px solid black;
-  background-color: whtie;
+  color: black;
+  background-color: white;
   margin-left: 1rem;
   padding-inline: 0.5rem;
   text-align: left;
